third_party/move/move-compiler-v2/tests/more-v1/translated_ir_tests/move/commands/while_move_local_2.exp

Diagnostics:
error: cannot move local `x` since it is still in use
  ┌─ tests/more-v1/translated_ir_tests/move/commands/while_move_local_2.move:8:17
  │
8 │             y = move x;
  │                 ^^^^^^
  │                 │
  │                 attempted to move here
  │                 used here

error: cannot move local `y` since it is still in use
   ┌─ tests/more-v1/translated_ir_tests/move/commands/while_move_local_2.move:10:17
   │
10 │             x = move y;
   │                 ^^^^^^
   │                 │
   │                 attempted to move here
   │                 used here
